--- a/build.xml
+++ b/build.xml
@@ -21,7 +21,7 @@
     <property name="fop.config" value="conf/fop.xconf"/>
 
     <!-- Naming -->
-    <property name="xr-visualization.version.full" value="2026-01-31"/>
+    <property name="xr-visualization.version.full" value="2026-07-31-SNAPSHOT"/>
 
     <!-- Test resources -->
     <property name="xrechnung.version.major.minor" value="3.0"/>
